--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "legal-case-client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://legalizcasemanagement.site",
+  "homepage": ".",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
